changes required for postgres cluster

--- a/helm/tom.yaml
+++ b/helm/tom.yaml
@@ -27,6 +27,9 @@ spec:
             storage: "1Gi"
   backups:
     pgbackrest:
+      metadata:
+        labels:
+          sidecar.istio.io/inject: 'false'
       configuration:
       - secret:
           name: tom-pgbackrest-secret
@@ -35,23 +38,31 @@ spec:
       repos:
       - name: repo1
         azure:
-          container: "crunchy-backup3"
+          container: "crunchy-backup-4"
   proxy:
     pgBouncer:
       replicas: 1
+      config:
+        global:
+           query_wait_timeout: "240" 
+           default_pool_size: "100"
+           max_client_conn: "1000" #change depending on your app requirement  
+           # I could not get the "datbases:" setting to work at all.  I have no idea what is wrong with it.
+           # https://access.crunchydata.com/documentation/postgres-operator/5.0.0/tutorial/connection-pooling/
+           # https://www.pgbouncer.org/config.html
   users:
-  - name: tom
+  - name: lti-tom  # this user is allowed through pg-bouncer
     databases:
       - tom
-      - keycloak
-      - camunda
-      - postgres
-  - name: lti-admin
+      #- keycloak
+      #- camunda
+      #- postgres
+  - name: lti-admin  # not allowed through pg-bouncer (SUPER USER)
     databases:
       - tom
-      - keycloak
-      - camunda
-      - postgres
+      #- keycloak
+      #- camunda
+      #- postgres
     options: 'SUPERUSER'
   userInterface:
     pgAdmin:
